Updated after getting comments from Sigurd Gartmann. Same.
2004-09-13  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated after getting comments from
	Sigurd Gartmann.
	* no.po: Same.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-13  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated after getting comments from
+	Sigurd Gartmann.
+	* no.po: Same.
+
 === nautilus 2.8.0 ===
 
 2004-09-12  Paisa Seeluangsawat  <paisa@users.sf.net>
