--- a/po/ar.po
+++ b/po/ar.po
@@ -1905,7 +1905,7 @@ msgstr "اليوم عند الساعة 00:00:00 مساءً"
 #: libnautilus-private/nautilus-file.c:2949
 #: src/nautilus-file-management-properties.c:493
 msgid "today at %-I:%M:%S %p"
-msgstr "اليوم عند الساعة %-I:%M:%S·%p"
+msgstr "اليوم عند الساعة %-I:%M:%S %p"
 
 #: libnautilus-private/nautilus-file.c:2951
 msgid "today at 00:00 PM"
@@ -5130,51 +5130,51 @@ msgstr "<span weight=\"bold\">التّاريخ</span>"
 
 #: src/nautilus-file-management-properties.glade.h:26
 msgid "<span weight=\"bold\">Default View</span>"
-msgstr "<span·weight=\"bold\">المشهد الإفتراضي</span>"
+msgstr "<span weight=\"bold\">المشهد الإفتراضي</span>"
 
 #: src/nautilus-file-management-properties.glade.h:27
 msgid "<span weight=\"bold\">Executable Text Files</span>"
-msgstr "<span·weight=\"bold\">ملفات·نصية·قابلة·للتنفيذ</span>"
+msgstr "<span weight=\"bold\">ملفات·نصية·قابلة·للتنفيذ</span>"
 
 #: src/nautilus-file-management-properties.glade.h:28
 msgid "<span weight=\"bold\">Folders</span>"
-msgstr "<span·weight=\"bold\">المجلدات</span>"
+msgstr "<span weight=\"bold\">المجلدات</span>"
 
 #: src/nautilus-file-management-properties.glade.h:29
 msgid "<span weight=\"bold\">Icon Captions</span>"
-msgstr "<span·weight=\"bold\">عناوين الأيقونات</span>"
+msgstr "<span weight=\"bold\">عناوين الأيقونات</span>"
 
 #: src/nautilus-file-management-properties.glade.h:30
 msgid "<span weight=\"bold\">Icon View Defaults</span>"
-msgstr "<span·weight=\"bold\">إفتراضات مشهد الأيقونة</span>"
+msgstr "<span weight=\"bold\">إفتراضات مشهد الأيقونة</span>"
 
 #: src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">List Columns</span>"
-msgstr "<span·weight=\"bold\">أعمدة القوائم</span>"
+msgstr "<span weight=\"bold\">أعمدة القوائم</span>"
 
 #: src/nautilus-file-management-properties.glade.h:32
 msgid "<span weight=\"bold\">List View Defaults</span>"
-msgstr "<span·weight=\"bold\">إفتراضات مشهد القوائم</span>"
+msgstr "<span weight=\"bold\">إفتراضات مشهد القوائم</span>"
 
 #: src/nautilus-file-management-properties.glade.h:33
 msgid "<span weight=\"bold\">Other Previewable Files</span>"
-msgstr "<span·weight=\"bold\">ملفات آخرى قابلة للتعيين</span>"
+msgstr "<span weight=\"bold\">ملفات آخرى قابلة للتعيين</span>"
 
 #: src/nautilus-file-management-properties.glade.h:34
 msgid "<span weight=\"bold\">Sound Files</span>"
-msgstr "<span·weight=\"bold\">الملفات الصوتية</span>"
+msgstr "<span weight=\"bold\">الملفات الصوتية</span>"
 
 #: src/nautilus-file-management-properties.glade.h:35
 msgid "<span weight=\"bold\">Text Files</span>"
-msgstr "<span·weight=\"bold\">الملفات النصية</span>"
+msgstr "<span weight=\"bold\">الملفات النصية</span>"
 
 #: src/nautilus-file-management-properties.glade.h:36
 msgid "<span weight=\"bold\">Trash</span>"
-msgstr "<span·weight=\"bold\">سلة المهملات</span>"
+msgstr "<span weight=\"bold\">سلة المهملات</span>"
 
 #: src/nautilus-file-management-properties.glade.h:37
 msgid "<span weight=\"bold\">Tree View Defaults</span>"
-msgstr "<span·weight=\"bold\">إفتراضات المشهد الشجري</span>"
+msgstr "<span weight=\"bold\">إفتراضات المشهد الشجري</span>"
 
 #: src/nautilus-file-management-properties.glade.h:38
 msgid "Always"
