--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-14  Alexander Larsson  <alexl@redhat.com>
+
+	* ar.po:
+	Fix up spaces.
+
 2004-09-13  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated after getting comments from
