Fixed date l10n bug
2004-09-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Fixed date l10n bug

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2004-09-14  Alexander Larsson  <alexl@redhat.com>
 
 	* ar.po:
