Updated Italian translation.

--- a/po/it.po
+++ b/po/it.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus 2.4.x\n"
+"Project-Id-Version: nautilus 2.8.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-13 10:55+0200\n"
-"PO-Revision-Date: 2004-07-24 12:09+0200\n"
+"POT-Creation-Date: 2004-09-15 21:28+0200\n"
+"PO-Revision-Date: 2004-09-02 16:26+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italiano <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -786,7 +786,6 @@ msgid "International"
 msgstr "Internazionale"
 
 #: data/static_bookmarks.xml.h:17
-#, fuzzy
 msgid "Linux Documentation Project"
 msgstr "LDP (Progetto documentazione Linux)"
 
@@ -823,9 +822,8 @@ msgid "Netraverse"
 msgstr "Netraverse"
 
 #: data/static_bookmarks.xml.h:26
-#, fuzzy
 msgid "News and Media"
-msgstr "Novità e "
+msgstr "Novità e media"
 
 #: data/static_bookmarks.xml.h:27
 msgid "O'Reilly"
@@ -1197,9 +1195,8 @@ msgid "Default zoom level used by the list view."
 msgstr "Livello di ingrandimento predefinito usato nella vista a lista."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:24
-#, fuzzy
 msgid "Desktop computer icon name"
-msgstr "Nome dell'icona home sul desktop"
+msgstr "Nome dell'icona computer sul desktop"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:25
 msgid "Desktop font"
@@ -1644,13 +1641,12 @@ msgstr ""
 "La vista nel riquadro laterale da mostrare nelle nuove finestre aperte."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
-#, fuzzy
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
 msgstr ""
-"Impostare questo nome se si vuole un nome personalizzato per l'icona sul "
-"desktop che rimanda alla home."
+"Impostare questo nome se si vuole un nome personalizzato per l'icona "
+"computer sulla scrivania."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -2866,9 +2862,8 @@ msgstr "Temi"
 
 # Voce nel menù "Vai"
 #: libnautilus-private/nautilus-file-utilities.c:377
-#, fuzzy
 msgid "CD/DVD Creator"
-msgstr "Creazione CD"
+msgstr "Creazione CD/DVD"
 
 #: libnautilus-private/nautilus-file-utilities.c:379
 msgid "Windows Network"
@@ -3450,7 +3445,6 @@ msgstr "Vedi come %s"
 msgid "%s Viewer"
 msgstr "Visualizzatore di %s"
 
-# --new
 #: nautilus-computer.desktop.in.h:2
 msgid "View your computer storage"
 msgstr "Mostra i supporti di memorizzazione del computer"
@@ -3459,11 +3453,9 @@ msgstr "Mostra i supporti di memorizzazione del computer"
 msgid "Browse the filesystem with the file manager"
 msgstr "Esplora il file system con il file manager"
 
-# --new
 #: nautilus.desktop.in.h:2
-#, fuzzy
 msgid "File Browser"
-msgstr "Esplorazione file: %s"
+msgstr "Esplorazione file"
 
 #: nautilus-file-management-properties.desktop.in.h:1
 msgid "Change how files are managed"
@@ -4727,7 +4719,7 @@ msgstr "Apre l'oggetto selezionato in questa finestra"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:32
 msgid "Open with Other _Application..."
-msgstr "Apri con altra applica_zione..."
+msgstr "Apri con altra _applicazione..."
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prepare the selected files to be copied with a Paste Files command"
@@ -5133,13 +5125,11 @@ msgstr "<b>_Nome</b>"
 msgid "Edit Bookmarks"
 msgstr "Modifica i segnalibri"
 
-# --new
 #: src/nautilus-connect-server-dialog.c:139
 #: src/nautilus-connect-server-dialog.c:154
 msgid "Can't Connect to Server"
 msgstr "Impossibile connettersi al server"
 
-# --new
 #: src/nautilus-connect-server-dialog.c:152
 msgid "You must enter a name for the server."
 msgstr "È necessario fornire un nome per il server."
@@ -5154,87 +5144,76 @@ msgid "%s on %s"
 msgstr "%s su %s"
 
 #: src/nautilus-connect-server-dialog.c:380
-#, fuzzy
 msgid "_Location (URI):"
-msgstr "_Posizione (URL):"
+msgstr "_Posizione (URI):"
 
 #: src/nautilus-connect-server-dialog.c:424
-#, fuzzy
 msgid "_Server:"
-msgstr "_Mai"
+msgstr "_Server:"
 
 #: src/nautilus-connect-server-dialog.c:443
-#, fuzzy
 msgid "Optional information:"
-msgstr "Informazioni"
+msgstr "Informazioni opzionali:"
 
 #: src/nautilus-connect-server-dialog.c:455
-#, fuzzy
 msgid "_Share:"
-msgstr "Argilla friabile"
+msgstr "Con_divisione:"
 
 #: src/nautilus-connect-server-dialog.c:476
-#, fuzzy
 msgid "_Port:"
-msgstr "_Formato:"
+msgstr "_Porta:"
 
 #: src/nautilus-connect-server-dialog.c:496
-#, fuzzy
 msgid "_Folder:"
-msgstr "Taglia cartella"
+msgstr "Ca_rtella:"
 
 #: src/nautilus-connect-server-dialog.c:516
-#, fuzzy
 msgid "_User Name:"
-msgstr "_Nome:"
+msgstr "Nome _utente:"
 
 #: src/nautilus-connect-server-dialog.c:539
 msgid "_Name to use for connection:"
-msgstr ""
+msgstr "_Nome da usare per la connessione:"
 
 #: src/nautilus-connect-server-dialog.c:597
 msgid "Connect to Server"
 msgstr "Connessione al server"
 
 #: src/nautilus-connect-server-dialog.c:614
-#, fuzzy
 msgid "Service _type:"
-msgstr "Servizi in"
+msgstr "_Tipo di servizio:"
 
 #: src/nautilus-connect-server-dialog.c:623
 msgid "SSH"
-msgstr ""
+msgstr "SSH"
 
 #: src/nautilus-connect-server-dialog.c:625
 msgid "Public FTP"
-msgstr ""
+msgstr "FTP pubblico"
 
 #: src/nautilus-connect-server-dialog.c:627
 msgid "FTP (with login)"
-msgstr ""
+msgstr "FTP (con login)"
 
 #: src/nautilus-connect-server-dialog.c:629
-#, fuzzy
 msgid "Windows share"
-msgstr "Rete Windows"
+msgstr "Condivisione Windows"
 
 #: src/nautilus-connect-server-dialog.c:631
 msgid "WebDAV (HTTP)"
-msgstr ""
+msgstr "WebDAV (HTTP)"
 
 #: src/nautilus-connect-server-dialog.c:633
 msgid "Secure WebDAV (HTTPS)"
-msgstr ""
+msgstr "WebDAV sicuro (HTTPS)"
 
 #: src/nautilus-connect-server-dialog.c:635
-#, fuzzy
 msgid "Custom Location"
-msgstr "Posizione:"
+msgstr "Posizione personalizzata"
 
 #: src/nautilus-connect-server-dialog.c:685
-#, fuzzy
 msgid "Browse _Network"
-msgstr "Rete Windows"
+msgstr "Espora _rete"
 
 #: src/nautilus-connect-server-dialog.c:691
 msgid "C_onnect"
@@ -5800,9 +5779,8 @@ msgstr "Va alla cartella dei modelli"
 
 #: src/nautilus-navigation-window-ui.xml.h:16
 #: src/nautilus-spatial-window-ui.xml.h:9
-#, fuzzy
 msgid "Go to the CD/DVD Creator"
-msgstr "Va alla «Creazione CD»"
+msgstr "Va alla «Creazione CD/DVD»"
 
 #: src/nautilus-navigation-window-ui.xml.h:17
 msgid "Go to the next visited location"
@@ -6326,9 +6304,8 @@ msgid "_Backgrounds and Emblems..."
 msgstr "Sfondi e sim_boli..."
 
 #: src/nautilus-shell-ui.xml.h:30
-#, fuzzy
 msgid "_CD/DVD Creator"
-msgstr "C_reazione CD"
+msgstr "C_reazione CD/DVD"
 
 #: src/nautilus-shell-ui.xml.h:31
 msgid "_Close"
@@ -6632,168 +6609,3 @@ msgstr "Server di rete"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Mostra i server della propria rete nel file manager Nautilus"
-
-#~ msgid "Add Nautilus to session"
-#~ msgstr "Aggiungi Nautilus alla sessione"
-
-#~ msgid ""
-#~ "If this is set to true, Nautilus adds itself to the session when it "
-#~ "starts up. This means it will be started the next time you log in."
-#~ msgstr ""
-#~ "Se impostata a vero, Nautilus è aggiunto alla sessione quando questa "
-#~ "inizia. In pratica verrà avviato al prossimo login."
-
-#~ msgid "There was an error displaying help: %s"
-#~ msgstr "Errore nel visualizzare la documentazione. %s"
-
-#~ msgid "not in menu"
-#~ msgstr "non nel menù"
-
-#~ msgid "in menu for this file"
-#~ msgstr "nel menù per questo file"
-
-#~ msgid "in menu for \"%s\""
-#~ msgstr "nel menù per «%s»"
-
-#~ msgid "default for this file"
-#~ msgstr "predefinito per questo file"
-
-#~ msgid "default for \"%s\""
-#~ msgstr "predefinito per «%s»"
-
-#~ msgid "Is not in the menu for \"%s\" items."
-#~ msgstr "Non è nel menù per gli oggetti «%s»."
-
-#~ msgid "Is in the menu for \"%s\"."
-#~ msgstr "È nel menù per «%s»."
-
-#~ msgid "Is in the menu for \"%s\" items."
-#~ msgstr "È nel menù per tutti gli oggetti «%s»."
-
-#~ msgid "Is in the menu for all \"%s\" items."
-#~ msgstr "È nel menù per tutti gli oggetti «%s»."
-
-#~ msgid "Is the default for \"%s\"."
-#~ msgstr "È predefinito per «%s»."
-
-#~ msgid "Is the default for \"%s\" items."
-#~ msgstr "È predefinito per gli oggetti «%s»."
-
-#~ msgid "Is the default for all \"%s\" items."
-#~ msgstr "È predefinito per tutti gli oggetti «%s»."
-
-#~ msgid "Modify \"%s\""
-#~ msgstr "Modificare «%s»"
-
-#~ msgid "Include in the menu for \"%s\" items"
-#~ msgstr "Includere nel menù per gli oggetti «%s»"
-
-#~ msgid "Use as default for \"%s\" items"
-#~ msgstr "Predefinito per gli oggetti «%s»"
-
-#~ msgid "Include in the menu for \"%s\" only"
-#~ msgstr "Includere nel menù solo per «%s»"
-
-#~ msgid "Use as default for \"%s\" only"
-#~ msgstr "Predefinito solo per «%s»"
-
-#~ msgid "Don't include in the menu for \"%s\" items"
-#~ msgstr "Non includere nel menù per gli oggetti «%s»"
-
-#~ msgid "Status"
-#~ msgstr "Stato"
-
-#~ msgid "Done"
-#~ msgstr "Fatto"
-
-#~ msgid "_Modify..."
-#~ msgstr "_Modifica..."
-
-#~ msgid "File Types and Programs"
-#~ msgstr "Tipi di file e programmi"
-
-#~ msgid "_Go There"
-#~ msgstr "_Vai là"
-
-#~ msgid ""
-#~ "You can configure which programs are offered for which file types in the "
-#~ "File Types and Programs dialog."
-#~ msgstr ""
-#~ "È possibile configurare quali programmi rendere disponibili per i vari "
-#~ "tipi di file nella finestra di dialogo «Tipi di file e programmi»."
-
-#~ msgid "Open with Other Application"
-#~ msgstr "Apri con altra applicazione"
-
-#~ msgid "Choose an application with which to open \"%s\":"
-#~ msgstr "Scegliere un'applicazione con cui aprire «%s»:"
-
-#~ msgid "Open with Other Viewer"
-#~ msgstr "Apri con altro visualizzatore"
-
-#~ msgid "Choose a view for \"%s\":"
-#~ msgstr "Scegliere una vista per «%s»:"
-
-#~ msgid "No viewers are available for \"%s\"."
-#~ msgstr "Nessun visualizzatore disponibile per «%s»."
-
-#~ msgid "No Viewers Available"
-#~ msgstr "Nessun visualizzatore disponibile"
-
-#~ msgid "There is no application associated with \"%s\"."
-#~ msgstr "Nessuna applicazione associata con «%s»."
-
-#~ msgid "No Application Associated"
-#~ msgstr "Nessuna applicazione associata"
-
-#~ msgid "There is no action associated with \"%s\"."
-#~ msgstr "Nessuna azione associata con «%s»."
-
-#~ msgid "No Action Associated"
-#~ msgstr "Nessuna azione associata"
-
-#~ msgid ""
-#~ "You can configure GNOME to associate applications with file types. Do you "
-#~ "want to associate an application with this file type now?"
-#~ msgstr ""
-#~ "È possibile configurare GNOME per associare una applicazione ad un tipo "
-#~ "di file. Associare ora una applicazione a questo tipo di file?"
-
-#~ msgid "_Associate Application"
-#~ msgstr "A_ssocia applicazione"
-
-#~ msgid "The viewer associated with \"%s\" is invalid."
-#~ msgstr "Il visualizzatore associato con «%s» non è valido."
-
-#~ msgid "Invalid Viewer Associated"
-#~ msgstr "Visualizzatore associato non valido"
-
-#~ msgid "The application associated with \"%s\" is invalid."
-#~ msgstr "L'applicazione associata con «%s» non è valida."
-
-#~ msgid "Invalid Application Associated"
-#~ msgstr "Applicazione associata non valida"
-
-#~ msgid "The action associated with \"%s\" is invalid."
-#~ msgstr "L'azione associata con «%s» non è valida."
-
-#~ msgid "Invalid Action Associated"
-#~ msgstr "Azione associata non valida"
-
-#~ msgid ""
-#~ "You can configure GNOME to associate a different application or viewer "
-#~ "with this file type. Do you want to associate an application or viewer "
-#~ "with this file type now?"
-#~ msgstr ""
-#~ "È possibile configurare GNOME per associare una diversa applicazione o "
-#~ "visualizzatore a questo tipo di file. Associare ora un'applicazione o un "
-#~ "visualizzatore a questo tipo di file?"
-
-#~ msgid "_Associate Action"
-#~ msgstr "A_ssocia azione"
-
-#~ msgid "Browse Filesystem"
-#~ msgstr "Esplora file system"
-
-#~ msgid "Example:"
-#~ msgstr "Esempio:"
