--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-15  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation
+	by Luca Ferretti <elle.uca@infinito.it>.
+
 2004-09-15  Arafat Medini  <lumina@silverpen.de>
 
 	* ar.po: Updated Arabic translation.
