--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-17  Alexander Larsson  <alexl@redhat.com>
+
+	* cut-n-paste-code/libegg/egg-recent-model.c:
+	(egg_recent_model_monitor):
+	Update to latest egg-recent.
+
 2004-09-13  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
