--- a/po/no.po
+++ b/po/no.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.8.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-13 22:08+0200\n"
-"PO-Revision-Date: 2004-09-13 22:20+0200\n"
+"PO-Revision-Date: 2004-09-17 21:22+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -5088,7 +5088,7 @@ msgstr "SSH"
 
 #: src/nautilus-connect-server-dialog.c:625
 msgid "Public FTP"
-msgstr "Offentlig FTP"
+msgstr "Anonym FTP"
 
 #: src/nautilus-connect-server-dialog.c:627
 msgid "FTP (with login)"
