--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-directory.c (nautilus_directory_schedule_position_set):
+	Don't reference screen when removing.
+
 2004-09-17  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/file-manager/fm-directory-view.c: (get_activation_action),
