--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-24  Hasbullah Bin Pit  <sebol@my-penguin.org>
+
+	* ms.po: Updated Malay translation.
+
 2004-09-15  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation
