Clear clipboard after cut. Fixes #134420. Patch from Glenn Pierce.
2004-09-25  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (paste_clipboard_data):
	Clear clipboard after cut. Fixes #134420.
	Patch from Glenn Pierce.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-25  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (paste_clipboard_data):
+	Clear clipboard after cut. Fixes #134420.
+	Patch from Glenn Pierce.
+
 2004-09-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libnautilus-private/nautilus-file.c:
