--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-26  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-09-24  Hasbullah Bin Pit  <sebol@my-penguin.org>
 
 	* ms.po: Updated Malay translation.
