Fix in the French translation.
2004-09-29  Sebastien Bacher  <seb128@debian.org>

	* fr.po: Fix in the French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.7.92\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-13 10:55+0200\n"
-"PO-Revision-Date: 2004-09-10 23:52+0200\n"
+"PO-Revision-Date: 2004-09-29 13:13+0200\n"
 "Last-Translator: Sébastien Bacher <seb128@debian.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -5217,7 +5217,7 @@ msgstr "Emplacement personnalisé :"
 
 #: src/nautilus-connect-server-dialog.c:685
 msgid "Browse _Network"
-msgstr "Réseau le _réseau"
+msgstr "Parcourir le _réseau"
 
 #: src/nautilus-connect-server-dialog.c:691
 msgid "C_onnect"
