--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-29  Sebastien Bacher  <seb128@debian.org>
+
+	* fr.po: Fix in the French translation.
+
 2004-09-26  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
