Escape created uris. Patch from Michael Henson <mike@axl.net>
2004-10-01  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-connect-server-dialog.c (connect_to_server):
	Escape created uris.
	Patch from Michael Henson <mike@axl.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-01  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-connect-server-dialog.c (connect_to_server):
+	Escape created uris.
+	Patch from Michael Henson <mike@axl.net>
+	
 2004-09-25  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c (paste_clipboard_data):
