Correct centering of text when icon is selected (#154088) Patch from
2004-10-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Correct centering of text when icon is selected (#154088)
	Patch from Vincent Noel <vincent.noel@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-01  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Correct centering of text when icon is selected (#154088)
+	Patch from Vincent Noel <vincent.noel@gmail.com>
+
+2004-10-01  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-connect-server-dialog.c (connect_to_server):
 	Escape created uris.
 	Patch from Michael Henson <mike@axl.net>
