Allow move to non-same-fs. (#120052)
2004-10-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-dnd.c (nautilus_drag_default_drop_action_for_icons):
	Allow move to non-same-fs. (#120052)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-01  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-dnd.c (nautilus_drag_default_drop_action_for_icons):
+	Allow move to non-same-fs. (#120052)
+
+2004-10-01  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.c:
 	Correct centering of text when icon is selected (#154088)
 	Patch from Vincent Noel <vincent.noel@gmail.com>
