Fix reordering on resort (#144803) Patch from Jimmy Do
2004-10-01  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-model.c (fm_list_model_sort):
	Fix reordering on resort (#144803)
	Patch from Jimmy Do <crispyleaves@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-01  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-model.c (fm_list_model_sort):
+	Fix reordering on resort (#144803)
+	Patch from Jimmy Do <crispyleaves@gmail.com>
+
+2004-10-01  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-dnd.c (nautilus_drag_default_drop_action_for_icons):
 	Allow move to non-same-fs. (#120052)
 
