Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation. Close #154290.
+
 2004-09-29  Sebastien Bacher  <seb128@debian.org>
 
 	* fr.po: Fix in the French translation.
