Allow keynav on desktop by adding accel entries (#135399).
2004-10-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	Allow keynav on desktop by adding accel entries (#135399).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-04  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	* src/nautilus-shell-ui.xml:
+	* src/nautilus-spatial-window-ui.xml:
+	Allow keynav on desktop by adding accel entries (#135399).	
+
 2004-10-01  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c:
