Make sort-by-emblem not crash.
2004-10-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c:
	(nautilus_file_compare_for_sort):
	Make sort-by-emblem not crash.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-04  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c:
+	(nautilus_file_compare_for_sort):
+	Make sort-by-emblem not crash.
+
+2004-10-04  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/nautilus-directory-view-ui.xml:
 	* src/nautilus-shell-ui.xml:
 	* src/nautilus-spatial-window-ui.xml:
