--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Fixed Russian translation
+
 2004-10-03  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation. Close #154290.
