Don't need to detect libjpeg anymore.
2004-10-04  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Don't need to detect libjpeg anymore.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-04  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Don't need to detect libjpeg anymore.
+
+2004-10-04  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in (EXIF_LIBS): 
 	* libnautilus-private/nautilus-file.c:
 	(nautilus_file_compare_for_sort):
 	Make sort-by-emblem not crash.
