--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-05  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-list-view.c (fm_list_view_set_selection):
+	Notify about selection change only once per call.
+
 2004-10-04  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
