--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-05  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: More fixes
+
 2004-10-03  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Fixed Russian translation
