--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c (start_rubberbanding):
+	Use guint, not uint (#150359)
+	Patch from Gustavo Carneiro.
+
+2004-10-06  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory-async.c (directory_load_one):
 	Don't crash if info->name == NULL. (Not valid, but happened with
 	smb backend.)
