Readjust padding from last change.
2004-10-06  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c (draw_or_measure_label_text):
	Readjust padding from last change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c (draw_or_measure_label_text):
+	Readjust padding from last change.
+
+2004-10-06  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c (start_rubberbanding):
 	Use guint, not uint (#150359)
 	Patch from Gustavo Carneiro.
