--- a/po/vi.po
+++ b/po/vi.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Nautilus 2.3.x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-13 10:55+0200\n"
-"PO-Revision-Date: 2004-10-05 18:08+0700\n"
+"PO-Revision-Date: 2004-10-05 18:18+0700\n"
 "Last-Translator: pclouds <pclouds@vnlinux.org>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -1061,7 +1061,7 @@ msgstr "Chọn tất cả các văn bản trong một vùng văn bản"
 
 #: libnautilus/nautilus-clipboard-ui.xml.h:11 src/nautilus-shell-ui.xml.h:37
 msgid "_Paste Text"
-msgstr "_Ghép văn bản"
+msgstr "_Dán văn bản"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:1
 msgid ""
@@ -4786,7 +4786,7 @@ msgstr "Theo _loại"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:7
 msgid "Clean _Up by Name"
-msgstr "_Dọn dẹp theo tên"
+msgstr "_Sắp gọn theo tên"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:8
 msgid "Compact _Layout"
@@ -5227,9 +5227,7 @@ msgstr "Ứng xử"
 msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
-msgstr ""
-"Chọn thứ tự thông tin hiển thị dưới tên biểu tượng. Hiển thị nhiều thông tin "
-"hơn khi phóng to trong closer."
+msgstr "Chọn thứ tự thông tin hiển thị dưới tên biểu tượng. Hiển thị nhiều thông tin hơn khi phóng to hơn."
 
 #: src/nautilus-file-management-properties.glade.h:48
 msgid "Choose the order of information to appear in the list view."
