--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-08  Anders Carlsson  <andersca@gnome.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(convert_file_list_to_string), (get_clipboard_callback),
+	(clear_clipboard_callback), (convert_file_list_to_uri_list),
+	(copy_or_cut_files), (fm_directory_view_class_init):
+	Add support for pasting the clipboard contents as a string.
+
 2004-10-06  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c:
