Correct strcmp typo. (#142530) Patch from Simon Hart
2004-10-08  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (extension_action_slow_mime_types_ready_callback):
	Correct strcmp typo. (#142530)
	Patch from Simon Hart

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-08  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (extension_action_slow_mime_types_ready_callback):
+	Correct strcmp typo. (#142530)
+	Patch from Simon Hart
+	
 2004-10-08  Anders Carlsson  <andersca@gnome.org>
 
 	* src/file-manager/fm-directory-view.c:
