Set up clipboard when renaming.
2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file):
	Set up clipboard when renaming.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file):
+	Set up clipboard when renaming.	
+
+2004-10-11  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory.[ch]:
 	Make nautilus_directory_get_file_list virtual
 	* libnautilus-private/nautilus-desktop-directory.c:
