Use home icon for homedir. Patch from Anders Carlsson <andersca@gnome.org>
2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-utilities.[ch]:
	* libnautilus-private/nautilus-file.[ch]:
	* libnautilus-private/nautilus-icon-factory.c:
	Use home icon for homedir.
	Patch from Anders Carlsson  <andersca@gnome.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-10-11  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-utilities.[ch]:
+	* libnautilus-private/nautilus-file.[ch]:
+	* libnautilus-private/nautilus-icon-factory.c:
+	Use home icon for homedir.
+	Patch from Anders Carlsson  <andersca@gnome.org>
+
+2004-10-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file):
 	Set up clipboard when renaming.	
 
