--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-11  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for 2.8.1
+
+2004-10-11  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-utilities.[ch]:
 	* libnautilus-private/nautilus-file.[ch]:
 	* libnautilus-private/nautilus-icon-factory.c:
