--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,22 @@
-This is nautilus 2.8.0, the file manager for the Gnome 2 desktop.
+This is nautilus 2.8.1, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.8.1 are:
+* Update to latest egg-recent
+* Fix memory leaks
+* Clear clipboard after a cut file is pasted
+* Properly escape uris created by connect to server dialog
+* Better alignment of icon labels
+* Allow move (not copy) of a file to another filesystem
+* Fix reordering of selection when a listview is resorted
+* Allow keynav on desktop
+* Fix crash in sort-by-emblems mode
+* Performance fixes when selecting files
+* Performance increase in folder load
+* Allow pasting files as text
+* Fix nautilus extensions such as file-roller menus
+* Made select by pattern work in trash
+* Fixed cut/paste of text when renaming in listview
+* Always use homedir icon for homedir
 
 Major changes since 2.7.92 are:
 * Destroy metadata hashtable in right way, fixes crash
