Post release version bump
2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.8.1 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-10-11  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.8.1 ===
+
+2004-10-11  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for 2.8.1
 
