On mime mismatch, don't use the default app for "open".
2004-10-12  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (activate_check_mime_types):
	On mime mismatch, don't use the default app for "open".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-12  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (activate_check_mime_types):
+	On mime mismatch, don't use the default app for "open".
+
 2004-10-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
