Set the dialog's "visible" property to FALSE, we show it ourselves.
2004-10-12  Anders Carlsson  <andersca@gnome.org>

	* src/nautilus-file-management-properties.glade:
	Set the dialog's "visible" property to FALSE, we show it
	ourselves.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-12  Anders Carlsson  <andersca@gnome.org>
+
+	* src/nautilus-file-management-properties.glade:
+	Set the dialog's "visible" property to FALSE, we show it 
+	ourselves.
+	
 2004-10-12  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-link-desktop-file.[ch]:
