Add Open New Window menu item in browser
2004-10-13  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-navigation-window.c:
	(file_menu_new_window_callback), (real_merge_menus):
	Add Open New Window menu item in browser

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-10-13  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window-ui.xml:
+	* src/nautilus-navigation-window.c:
+	(file_menu_new_window_callback), (real_merge_menus):
+	Add Open New Window menu item in browser
+
+2004-10-13  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory-async.c:
 	(read_dot_hidden_file):
 	Only read .hidden files if they are regular files.
