--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@
 	* src/nautilus-navigation-window.c:
 	(file_menu_new_window_callback), (real_merge_menus):
 	Add Open New Window menu item in browser
-
+	Patch from Michael Henson <mike@axl.net>
+	
 2004-10-13  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
